[package]
name = "accept-encoding"
version = "0.2.0-alpha.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-net-web/accept-encoding"
documentation = "https://docs.rs/accept-encoding"
description = "Determine the best encoding possible from an Accept-Encoding HTTP header."
keywords = ["accept-encoding", "gzip", "brotli", "http", "server"]
categories = ["compression", "web-programming", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
http = "0.1.13"
thiserror = "1.0.20"

[dev-dependencies]
